feat: Convert to selection-only mode (v5.2.0)
- Remove automatic hover detection completely
- Extension now only works when text is selected
- Cleaner, more intentional user experience
- Update documentation to reflect selection-only mode
- Remove hover-related configuration and code
- Improve performance by reducing event listeners

Breaking change: Users must now select text to see time conversions

--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "Smart TimeZone Converter",
-  "version": "5.1.2",
-  "description": "Intelligent date/time detection with natural language, relative time, 100+ timezones, and elegant tooltips",
+  "version": "5.2.0",
+  "description": "Convert times when you select text - with natural language support, 100+ timezones, and elegant tooltips",
   "permissions": [
     "storage",
     "activeTab"
