fix: Add notifications permission and defensive checks for Chrome API
- Added 'notifications' permission to manifest.json
- Added safety checks for chrome.notifications API usage
- Prevents TypeError when API is undefined
- Fixes service worker registration error (Status code: 15)

--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,8 @@
   "description": "Smart timezone converter - Select any text with time info to instantly convert between 100+ timezones. Features natural language detection.",
   "permissions": [
     "storage",
-    "activeTab"
+    "activeTab",
+    "notifications"
   ],
   "host_permissions": [
     "<all_urls>"
